--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
 <app-header></app-header>
+
 <router-outlet></router-outlet>
+<!-- modal -->
+<app-modal *ngIf="modalSw"></app-modal>
+<!-- footer -->
 <app-footer></app-footer>
