--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -44,17 +44,17 @@
 <!-- barra de navegación -->
 <div class="navbar">
   <div class="parent">
-    <a [routerLink]="['hombre']" class="child">Hombre</a>
+    <a [routerLink]="['hombre','hombres']" class="child">Hombre</a>
     <div class="vr"></div>
-    <a [routerLink]="['mujer']" class="child">Mujer</a>
+    <a [routerLink]="['mujer','mujeres']" class="child">Mujer</a>
     <div class="vr"></div>
-    <a [routerLink]="['junior']" class="child">Junior</a>
+    <a [routerLink]="['junior','junior']" class="child">Junior</a>
     <div class="vr"></div>
-    <a [routerLink]="['ninos']" class="child">Niños</a>
+    <a [routerLink]="['ninos','niños']" class="child">Niños</a>
     <div class="vr"></div>
-    <a [routerLink]="['accesorios']" class="child">Accesorios</a>
+    <a [routerLink]="['accesorios','accesorios']" class="child">Accesorios</a>
     <div class="vr"></div>
-    <a [routerLink]="['ofertas']" class="child">Ofertas</a>
+    <a [routerLink]="['ofertas','ofertas']" class="child">Ofertas</a>
   </div>
   <label for="m1" class="close">X</label>
 </div>
