--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,404 +1,1 @@
-:host {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 16px;
-  margin: 0px;
-  padding: 0px;
-  --dark: #000000;
-  --white: #ffffff;
-  --gray: #e6e6e6;
-  --light: #f4f4f4;
-}
-
-h1,
-h2,
-h3,
-h4,
-h5,
-h6 {
-  margin: 10px 0;
-}
-
-p {
-  margin: 0;
-}
-
-.spacer {
-  flex: 1;
-}
-.menu {
-  display: none;
-}
-.searchbar {
-  display: flex;
-  top: 0;
-  height: 4em;
-  color: var(--dark);
-  padding: 5px;
-  margin: auto;
-  left: 0;
-  right: 0;
-}
-.searchbar h1 {
-  margin-left: 2em;
-}
-
-.searchbar h1 a {
-  text-decoration: none;
-  color: var(--dark);
-  text-shadow: 1px 1px 2px var(--dark);
-}
-
-.bar {
-  display: flex;
-  position: relative;
-  width: 60%;
-  align-self: flex-end;
-  margin: auto;
-  right: 0;
-}
-.navbar {
-  display: flex;
-  height: 3.5em;
-  background-color: #000000;
-  color: var(--white);
-  left: 0;
-  right: 0;
-  margin: 0;
-  padding: 0;
-  align-items: center;
-  align-content: center;
-}
-.parent {
-  display: flex;
-  align-items: center;
-  text-align: center;
-  margin: auto;
-}
-.child {
-  width: 100px;
-  height: 3.5em;
-  text-decoration: none;
-  color: var(--white) !important;
-  line-height: 3.5em;
-  margin: auto;
-  font-weight: bold;
-}
-.vr {
-  border: 1px solid var(--white);
-  height: 2em;
-  opacity: 0.5;
-}
-
-/* css inputs */
-.input-search {
-  padding: 0px;
-  border: 1px solid var(--gray);
-  height: 2.5em;
-  background-color: #eeeeee;
-  width: 30rem;
-  font-size: medium;
-  padding-left: 5px;
-  padding-top: 0;
-  outline: none;
-}
-
-.button {
-  margin: none;
-  border: 0px;
-  background-color: #dedede;
-  width: 3em;
-  height: 100%;
-  cursor: pointer;
-  border: 1px solid #dedede;
-}
-.button img:hover {
-  width: 90%;
-}
-.car {
-  /* position: absolute; */
-  height: 2.5em;
-  cursor: pointer;
-  margin-right: 2em;
-}
-.user {
-  height: 2.5em;
-  cursor: pointer;
-}
-.user img {
-  width: 70%;
-  height: 100%;
-}
-.car img {
-  width: 70%;
-  height: 100%;
-}
-.not {
-  display: flex;
-  align-items: center;
-  position: absolute;
-  background-color: #5b17aa;
-  border-radius: 1em;
-  width: 1em;
-  height: 1em;
-  padding: 3px;
-  color: var(--white);
-  font-size: x-small;
-  margin-left: 2em;
-}
-.not small {
-  margin: auto;
-}
-.button img {
-  width: 100%;
-}
-
-.buttons {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* margin-left: auto; */
-  margin: auto;
-  width: 30%;
-}
-.button-login {
-  margin-left: 2em;
-  background-color: var(--white);
-  padding: 5px;
-  color: var(--dark);
-  cursor: pointer;
-  border: 1px solid var(--dark);
-  width: 8em;
-}
-.login .button-login :hover {
-  background-color: var(--dark) !important;
-  color: var(--white);
-}
-
-/* footer */
-.foot {
-  position: relative;
-  bottom: 0px;
-  left: 0;
-  right: 0;
-  background-color: var(--dark);
-  height: auto;
-  color: var(--white);
-  margin-bottom: 0px;
-}
-.col {
-  padding-top: 6em;
-  margin: auto;
-  color: var(--white);
-  margin-top: -50px;
-  padding-bottom: 3em;
-}
-.col h3 {
-  margin-bottom: 2em;
-}
-.col a {
-  text-decoration: none;
-  color: var(--white);
-  margin-bottom: 1em;
-}
-.inf {
-  display: flex;
-}
-.inf a {
-  margin: 0.5em;
-}
-.inf a img {
-  width: 2em;
-}
-.footer {
-  /* margin-bottom: 1em; */
-  margin-top: 0px;
-  padding-top: 0px;
-}
-.footer hr {
-  margin-top: 0px;
-  opacity: 0.5;
-  width: 96%;
-}
-
-footer {
-  margin-top: 8px;
-  display: flex;
-  align-items: center;
-  line-height: 20px;
-}
-
-footer a {
-  display: flex;
-  align-items: center;
-}
-.group {
-  display: flex;
-}
-.title {
-  display: flex;
-  left: 0;
-  margin: auto;
-  text-align: left;
-  width: 40%;
-}
-.title h1 {
-  font-weight: bold;
-  font-family: "Bebas Neue", cursiva;
-  color: #000;
-}
-.more {
-  display: none;
-}
-
-#m1 {
-  display: none;
-}
-#m1:checked ~ div {
-  margin-left: 0;
-}
-.close {
-  display: none;
-}
-/* Responsive Styles */
-@media screen and (max-width: 768px) {
-  /* header */
-  .navbar {
-    position: fixed;
-    width: 200px;
-    left: 0;
-    top: 0;
-    display: block;
-    min-height: 400px;
-    opacity: 0.9;
-    z-index: 9999;
-    /* display: none; */
-    margin-left: -200px;
-    transition: 400ms ease-in;
-  }
-  .close {
-    position: absolute;
-    bottom: 0;
-    display: block;
-    left: 0;
-    right: 0;
-    text-align: center;
-    margin: auto;
-    font-weight: bold;
-    padding-bottom: 1em;
-  }
-  .navbar .parent {
-    display: block;
-  }
-  .navbar.child {
-    opacity: 1;
-  }
-  .navbar .vr {
-    height: 0px;
-  }
-  .searchbar {
-    display: block;
-    margin-bottom: 3em;
-    /* width: 100%; */
-    left: 0;
-    top: 0;
-  }
-  .searchbar .car {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: auto;
-    margin-top: 1em;
-    margin-right: 1em;
-  }
-
-  .searchbar .login {
-    position: absolute;
-    top: 0;
-  }
-  .searchbar .bar {
-    position: absolute;
-    justify-content: center;
-    width: 100%;
-  }
-  .searchbar .user {
-    display: none;
-  }
-  .searchbar .login {
-    display: none;
-  }
-
-  .searchbar .group {
-    width: 90%;
-  }
-  .searchbar .group button {
-    width: 4em;
-  }
-  .searchbar .title {
-    width: 100%;
-    top: 0;
-  }
-  .searchbar .title h1 {
-    font-size: x-large;
-    padding-bottom: 0.2em;
-    padding-left: 0.3em;
-    font-weight: bold;
-    font-family: "Bebas Neue", cursiva;
-    color: #000;
-  }
-  .menu {
-    display: block;
-    position: absolute;
-    font-weight: bold;
-    font-size: xx-large;
-    margin-top: 0.1em;
-    margin-left: 0.2em;
-    color: var(--dark);
-    text-shadow: 1px 1px 1px var(--dark);
-  }
-  /* pie */
-  .foot {
-    display: block;
-    padding: 1em;
-  }
-  .foot .col {
-    margin: 1em;
-    padding: 0;
-  }
-  .r {
-    border-bottom: 1px solid var(--gray);
-  }
-  .foot .col h3 {
-    margin: 1em;
-  }
-  .foot .sub-menu {
-    /* padding: 0 18px; */
-    background-color: white;
-    display: none;
-    overflow: hidden;
-  }
-  .col .more {
-    display: block;
-    position: absolute;
-    font-size: x-large;
-    font-weight: 900;
-    right: 0;
-    margin-top: -1.8em;
-    margin-right: 2em;
-  }
-  .foot .inf {
-    margin-left: 1em;
-  }
-
-  .footer hr {
-    display: none;
-    opacity: 0;
-  }
-  .foot .sub-menu a {
-    float: none;
-    width: 150px;
-  }
-}
-
-@media screen and (max-width: 575px) {
-}
+:host{font-family:-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen,Ubuntu,Cantarell,"Open Sans","Helvetica Neue",sans-serif;font-size:16px;margin:0;padding:0;--dark:#000;--white:#fff;--gray:#e6e6e6;--light:#f4f4f4}h1,h2,h3,h4,h5,h6{margin:10px 0}p{margin:0}.spacer{flex:1}.menu{display:none}.searchbar{display:flex;top:0;height:4em;color:var(--dark);padding:5px;margin:auto;left:0;right:0}.searchbar h1{margin-left:2em}.searchbar h1 a{text-decoration:none;color:var(--dark);text-shadow:1px 1px 2px var(--dark)}.bar{display:flex;position:relative;width:60%;align-self:flex-end;margin:auto;right:0}.navbar{display:flex;height:3.5em;background-color:#000;color:var(--white);left:0;right:0;margin:0;padding:0;align-items:center;align-content:center}.parent{display:flex;align-items:center;text-align:center;margin:auto}.child{width:100px;height:3.5em;text-decoration:none;color:var(--white)!important;line-height:3.5em;margin:auto;font-weight:700}.vr{border:1px solid var(--white);height:2em;opacity:.5}.input-search{padding:0;border:1px solid var(--gray);height:2.5em;background-color:#eee;width:30rem;font-size:medium;padding-left:5px;padding-top:0;outline:none}.button{margin:none;border:0;background-color:#dedede;width:3em;height:100%;cursor:pointer;border:1px solid #dedede}.button img:hover{width:90%}.car{height:2.5em;cursor:pointer;margin-right:2em}.user{height:2.5em;cursor:pointer}.user img{width:70%;height:100%}.car img{width:70%;height:100%}.not{display:flex;align-items:center;position:absolute;background-color:#5b17aa;border-radius:1em;width:1em;height:1em;padding:3px;color:var(--white);font-size:x-small;margin-left:2em}.not small{margin:auto}.button img{width:100%}.buttons{display:flex;align-items:center;justify-content:center;margin:auto;width:30%}.button-login{margin-left:2em;background-color:var(--white);padding:5px;color:var(--dark);cursor:pointer;border:1px solid var(--dark);width:8em}.login .button-login :hover{background-color:var(--dark)!important;color:var(--white)}.foot{position:relative;bottom:0;left:0;right:0;background-color:var(--dark);height:auto;color:var(--white);margin-bottom:0}.col{padding-top:6em;margin:auto;color:var(--white);margin-top:-50px;padding-bottom:3em}.col h3{margin-bottom:2em}.col a{text-decoration:none;color:var(--white);margin-bottom:1em}.inf{display:flex}.inf a{margin:.5em}.inf a img{width:2em}.footer{margin-top:0;padding-top:0}.footer hr{margin-top:0;opacity:.5;width:96%}footer{margin-top:8px;display:flex;align-items:center;line-height:20px}footer a{display:flex;align-items:center}.group{display:flex}.title{display:flex;left:0;margin:auto;text-align:left;width:40%}.title h1{font-weight:700;font-family:"Bebas Neue",cursiva;color:#000}.more{display:none}#m1{display:none}#m1:checked ~ div{margin-left:0}.close{display:none}@media screen and (max-width: 768px){.navbar{position:fixed;width:200px;left:0;top:0;display:block;min-height:400px;opacity:.9;z-index:9999;margin-left:-200px;transition:400ms ease-in}.close{position:absolute;bottom:0;display:block;left:0;right:0;text-align:center;margin:auto;font-weight:700;padding-bottom:1em}.navbar .parent{display:block}.navbar.child{opacity:1}.navbar .vr{height:0}.searchbar{display:block;margin-bottom:3em;left:0;top:0}.searchbar .car{position:absolute;top:0;right:0;margin:auto;margin-top:1em;margin-right:1em}.searchbar .login{position:absolute;top:0}.searchbar .bar{position:absolute;justify-content:center;width:100%}.searchbar .user{display:none}.searchbar .login{display:none}.searchbar .group{width:90%}.searchbar .group button{width:4em}.searchbar .title{width:100%;top:0}.searchbar .title h1{font-size:x-large;padding-bottom:.2em;padding-left:.3em;font-weight:700;font-family:"Bebas Neue",cursiva;color:#000}.menu{display:block;position:absolute;font-weight:700;font-size:xx-large;margin-top:.1em;margin-left:.2em;color:var(--dark);text-shadow:1px 1px 1px var(--dark)}.foot{display:block;padding:1em}.foot .col{margin:1em;padding:0}.r{border-bottom:1px solid var(--gray)}.foot .col h3{margin:1em}.foot .sub-menu{background-color:#fff;display:none;overflow:hidden}.col .more{display:block;position:absolute;font-size:x-large;font-weight:900;right:0;margin-top:-1.8em;margin-right:2em}.foot .inf{margin-left:1em}.footer hr{display:none;opacity:0}.foot .sub-menu a{float:none;width:150px}}
