--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -29,16 +29,16 @@
     <h3>SÍGUENOS EN:</h3>
     <div class="inf">
       <a href="">
-        <img src="../assets/icons/Grupo 179.svg" alt="" />
+        <img src="assets/icons/Grupo 179.svg" alt="" />
       </a>
       <a href="">
-        <img src="../assets/icons/Grupo 180.svg" alt="" />
+        <img src="assets/icons/Grupo 180.svg" alt="" />
       </a>
       <a href="">
-        <img src="../assets/icons/Grupo 181.svg" alt="" />
+        <img src="assets/icons/Grupo 181.svg" alt="" />
       </a>
       <a href="">
-        <img src="../assets/icons/Grupo 127.svg" alt="" />
+        <img src="assets/icons/Grupo 127.svg" alt="" />
       </a>
     </div>
   </div>
