--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -20,7 +20,7 @@
       <!-- </div> -->
       <!-- <div class="group"> -->
       <button class="button" (click)="buscarProducto(buscar.value)">
-        <img src="../assets/icons/Icon ionic-ios-search.svg" alt="buscar" />
+        <img src="assets/icons/Icon ionic-ios-search.svg" alt="buscar" />
       </button>
       <!-- </div> -->
     </div>
@@ -30,10 +30,10 @@
       <div class="not" *ngIf="products.length != 0">
         <small>{{ products.length }}</small>
       </div>
-      <img src="../assets/icons/icon-cart.svg" alt="carrito" />
+      <img src="assets/icons/icon-cart.svg" alt="carrito" />
     </div>
     <div class="user">
-      <img src="../assets/icons/icon-user.svg" alt="carrito" />
+      <img src="assets/icons/icon-user.svg" alt="carrito" />
     </div>
     <div class="login">
       <button class="button-login">Iniciar Sesión</button>
