--- a/src/app/components/mas-buscados/mas-buscados.component.html
+++ b/src/app/components/mas-buscados/mas-buscados.component.html
@@ -41,7 +41,7 @@
               )
             "
           >
-            <img src="../assets/icons/shopping-cart.png" alt="..." />
+            <img src="assets/icons/shopping-cart.png" alt="..." />
             Agregar al carrito
           </button>
         </div>
