--- a/src/app/pages/buscar/buscar.component.html
+++ b/src/app/pages/buscar/buscar.component.html
@@ -38,7 +38,7 @@
             )
           "
         >
-          <img src="../assets/icons/shopping-cart.png" alt="..." />
+          <img src="assets/icons/shopping-cart.png" alt="..." />
           Agregar al carrito
         </button>
 
