cambios en formatos

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -4,7 +4,9 @@
 <div class="searchbar">
   <div class="title">
     <label class="menu" for="m1">☰</label>
-    <h1><a [routerLink]="['home']">CLOTHESSTORE</a></h1>
+    <a [routerLink]="['home']">
+      <img src="assets/images/logo.svg" alt="">
+    </a>
   </div>
   <div class="bar">
     <div class="group">
