--- a/src/app/components/mas-buscados/mas-buscados.component.html
+++ b/src/app/components/mas-buscados/mas-buscados.component.html
@@ -26,8 +26,8 @@
             <span title="{{ item.title }}">{{ item.title }}</span>
           </div>
           <div class="prices">
-            <strong>${{ item.price }}</strong>
-            <span class="sale">${{ item.price }}</span>
+            <strong>${{ item.price | number: '3.0' }}</strong>
+            <span class="sale">${{ item.price | number:'3.0' }}</span>
           </div>
           <button
             class="btn-add"
