--- a/src/app/pages/buscar/buscar.component.html
+++ b/src/app/pages/buscar/buscar.component.html
@@ -22,8 +22,8 @@
         </div>
 
         <div class="prices">
-          <strong>${{ item.price }}</strong>
-          <span class="sale">${{ item.price }}</span>
+          <strong>${{ item.price | number: '3.0' }}</strong>
+          <span class="sale">${{ item.price | number: '3.0' }}</span>
         </div>
 
         <button
