--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,8 +1,10 @@
 :host {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 16px;
-  margin: 0px;
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   padding: 0px;
   --dark: #000000;
   --white: #ffffff;
@@ -25,8 +27,4 @@ p {
 
 .spacer {
   flex: 1;
-}
-
-
-@media screen and (max-width: 575px) {
 }
