--- a/src/app/components/mas-buscados/mas-buscados.component.css
+++ b/src/app/components/mas-buscados/mas-buscados.component.css
@@ -24,7 +24,7 @@
 .card {
   /* all: unset; */
   border: 1px solid #eee;
-  background-color: var(--gray);
+  background-color: var(--light);
   min-height: 150px;
   height: 400px;
   min-width: 20em;
@@ -92,19 +92,6 @@
   box-shadow: 0 4px 17px rgba(0, 0, 0, 0.35);
 }
 
-.card-container .card:not(.highlight-card):hover .material-icons path {
-  fill: rgb(105, 103, 103);
-}
-
-.card.highlight-card {
-  background-color: #1976d2;
-  color: white;
-  font-weight: 600;
-  border: none;
-  width: auto;
-  min-width: 30%;
-  position: relative;
-}
 
 .card.card.highlight-card span {
   margin-left: 60px;
