--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,8 @@
+<!-- header (searchbar, navbar) -->
 <app-header></app-header>
-
+<!-- mensajes -->
+<app-mensajes></app-mensajes>
+<!-- router -->
 <router-outlet></router-outlet>
 <!-- modal -->
 <app-modal *ngIf="modalSw"></app-modal>
